# transcription-platform

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  DEPLOY_RAILWAY.md  Dockerfile  HANDOVER.md  apikey.txt  apisecret.txt  appid.txt  build_log_web.txt  build_log_web_2.txt  build_log_web_3.txt  check_imports.py  cloudbuild.yaml  docker-compose.yml  help.txt  package.json  pnpm-lock.yaml  test_asr_runtime.py  test_db_conn.py  tsconfig.base.json  update_help.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/phase-1/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
apps/api/: .dockerignore  Dockerfile  asr.py  audio.py  auth.py  database.py  diarization.py  jest.config.js  main.py  merger.py  models.py  package.json  requirements.txt  schemas.py  seed_user.py  style_guides.py  test_transcription.py  transcripts.py  tsconfig.json  worker.py
apps/web/: .env.production  Dockerfile  build_output.txt  build_output_2.txt  index.html  nginx.conf  package.json  test_output.txt  tsconfig.json  vite.config.ts
login details/: credentials.txt
services/asr-worker/: Dockerfile  asr.py  diarization.py  main.py  models.py  pyproject.toml  requirements.txt
services/asr-worker/tests/: test_asr.py
session-notes/: session_2026-04-07.md
tmp/: check_tables.ts  init_db.ts  test_db.ts
(+156 files in other folders)
